src/objects/Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Invoice_Statement__c</fullName>
        <label>Invoice Statement</label>
        <referenceTo>Invoice_Statement__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Merchandise__c</fullName>
        <label>Merchandise</label>
        <referenceTo>Merchandise__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Units_Sold__c</fullName>
        <label>Units Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <formula>Unit_Price__c  *  Units_Sold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Line Item</label>
    <nameField>
        <label>Line Item Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Order_in_stock</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISNEW(),Merchandise__r.Total_Inventory__c  &lt;  Units_Sold__c,IF( Units_Sold__c &lt; PRIORVALUE( Units_Sold__c ) ,FALSE, Merchandise__r.Total_Inventory__c &lt;( Units_Sold__c - PRIORVALUE( Units_Sold__c ) )))</errorConditionFormula>
        <errorDisplayField>Units_Sold__c</errorDisplayField>
        <errorMessage>You have ordered more items than we have in stock.</errorMessage>
    </validationRules>
</CustomObject>